--- a/app/src/main/res/layout/list_item_solicitacoes.xml
+++ b/app/src/main/res/layout/list_item_solicitacoes.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tvUsuario"
+        android:id="@+id/tvNomeSolicitante"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
@@ -14,14 +14,35 @@
         android:layout_marginBottom="8dp"/>
 
     <TextView
-        android:id="@+id/tvSuprimento"
+        android:id="@+id/tvEnderecoSolicitante"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:layout_marginBottom="4dp"/>
 
     <TextView
-        android:id="@+id/tvData"
+        android:id="@+id/tvContatoSolicitante"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginBottom="4dp"/>
+
+    <TextView
+        android:id="@+id/tvSuprimentoUid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginBottom="4dp"/>
+
+    <TextView
+        android:id="@+id/tvDataSolicitacao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginBottom="4dp"/>
+
+    <TextView
+        android:id="@+id/tvStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
