--- a/app/src/main/res/layout/activity_solicitacoes.xml
+++ b/app/src/main/res/layout/activity_solicitacoes.xml
@@ -2,30 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Solicitações de Suprimentos"
-        android:textColor="@color/green_primary"
+        android:text="Lista de Solicitações"
         android:textSize="24sp"
+        android:textColor="@color/green_primary"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp" />
 
     <ListView
-        android:id="@+id/listViewRequests"
+        android:id="@+id/listViewSolicitacoes"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
