--- a/app/src/main/res/layout/activity_solicitacoes.xml
+++ b/app/src/main/res/layout/activity_solicitacoes.xml
@@ -25,4 +25,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- TextView para mostrar quando a lista estiver vazia -->
+    <TextView
+        android:id="@+id/tvEmptyListMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lista vazia"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:textColor="@color/gray_light"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
