--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,18 @@
     android:padding="16dp"
     tools:context=".view.HomeActivity">
 
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/tvRegisterTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/btnListSupplies"
         android:layout_width="match_parent"
@@ -19,5 +31,5 @@
         android:id="@+id/btnListRequests"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Listar Solicitações de Suprimentos" />
+        android:text="Listar Solicitações" />
 </LinearLayout>
