--- a/app/src/main/res/layout/activity_adicionar_suprimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_suprimento.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.AdicionarSuprimentoActivity">
+    tools:context=".view.AdicionarSuprimentoActivity"
+    android:background="@color/background">
 
     <EditText
         android:id="@+id/etDescricao"
