--- a/app/src/main/res/layout/activity_solicitar_suprimento.xml
+++ b/app/src/main/res/layout/activity_solicitar_suprimento.xml
@@ -7,11 +7,13 @@
     tools:context=".view.SolicitarSuprimentoActivity">
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/tvSupplyDetails"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Detalhes do Suprimento"
         android:textSize="18sp"
+        android:textColor="@color/black"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
