--- a/app/src/main/res/layout/activity_suprimentos.xml
+++ b/app/src/main/res/layout/activity_suprimentos.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:text="Lista de Suprimentos"
         android:textSize="24sp"
-        android:textColor="@color/green_primary"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,6 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="16dp" />
 
-    <!-- TextView para mostrar quando a lista estiver vazia -->
     <TextView
         android:id="@+id/tvEmptyListMessage"
         android:layout_width="wrap_content"
