--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="green_light">#C8E6C9</color>
     <color name="white">#FFFFFF</color>
     <color name="gray_light">#BDBDBD</color>
+    <color name="black">#000000</color>
+    <color name="background">#F8F8F2</color>
 </resources>
