--- a/app/src/main/res/layout/activity_adicionar_suprimento.xml
+++ b/app/src/main/res/layout/activity_adicionar_suprimento.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.AdicionarSuprimentoActivity"
-    android:background="@color/background">
+    android:background="@color/white"
+    tools:context=".view.AdicionarSuprimentoActivity">
+
+    <TextView
+        android:id="@+id/tvAddSuppliesTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Adicionar Suprimento"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_margin="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/etDescricao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Descrição do Suprimento"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="16dp"
+        android:backgroundTint="@color/green_primary"
+        app:layout_constraintTop_toBottomOf="@id/tvAddSuppliesTitle"
+        app:layout_constraintTop_margin="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
     <EditText
         android:id="@+id/etQuantidade"
@@ -23,28 +39,38 @@
         android:layout_height="wrap_content"
         android:hint="Quantidade"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="16dp"
+        android:backgroundTint="@color/green_primary"
+        app:layout_constraintTop_toBottomOf="@id/etDescricao"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescricao" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
     <EditText
         android:id="@+id/etUnidadeMedida"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Unidade de Medida"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="16dp"
+        android:backgroundTint="@color/green_primary"
+        app:layout_constraintTop_toBottomOf="@id/etQuantidade"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etQuantidade" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Adicionar Suprimento"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/green_primary"
+        android:textColor="@color/white"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/etUnidadeMedida"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etUnidadeMedida"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
