--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -16,6 +16,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_margin="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -27,6 +28,7 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
+        app:layout_constraintTop_margin="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
@@ -40,6 +42,7 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/etName"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
@@ -52,6 +55,7 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
@@ -65,6 +69,7 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/etAddress"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
@@ -78,6 +83,7 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8" />
@@ -89,6 +95,7 @@
         android:text="Cadastrar"
         android:backgroundTint="@color/green_primary"
         android:textColor="@color/white"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/etPhone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
