--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_margin="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -28,9 +29,9 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
+        app:layout_constraintTop_margin="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintWidth_percent="0.8" />
 
     <EditText
@@ -42,9 +43,9 @@
         android:padding="16dp"
         android:backgroundTint="@color/green_primary"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
+        app:layout_constraintTop_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintWidth_percent="0.8" />
 
     <Button
@@ -54,6 +55,7 @@
         android:text="Entrar"
         android:backgroundTint="@color/green_primary"
         android:textColor="@color/white"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
