--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,12 @@
         android:id="@+id/tvWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bem-vindo"
+        android:text="Bem Vindo"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_margin="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -26,6 +27,8 @@
         android:text="Login"
         android:backgroundTint="@color/green_primary"
         android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/tvWelcome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +41,8 @@
         android:text="Cadastro"
         android:backgroundTint="@color/green_primary"
         android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +55,8 @@
         android:text="Seguir como Convidado"
         android:backgroundTint="@color/green_primary"
         android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/btnRegister"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
