--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,5 +34,14 @@
         android:layout_height="wrap_content"
         android:text="Listar Solicitações"
         android:backgroundTint="@color/green_primary"
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/btnListDeliveries"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Listar Entregas"
+        android:backgroundTint="@color/green_primary"
         android:textColor="@color/white" />
 </LinearLayout>
